tests/pyright/fail/write_parquet_path_must_be_str.py
from __future__ import annotations

from dataclasses import dataclass
from typing import Any, cast

import polars as pl

from planframe_polars import PolarsFrame


@dataclass(frozen=True)
class S:
    id: int


pf = cast(Any, PolarsFrame[S])(pl.DataFrame({"id": [1]}).lazy())

# should fail: path must be str
pf.sink_parquet(123)
